--- a/actividad-biografia/index.html
+++ b/actividad-biografia/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Biografía de Patricio Sardelli</title>
+    <title>Biografía de Airbag</title>
 </head>
 <body>
     <!-- Titulo -->
@@ -22,23 +22,107 @@
         <h2 class="titulo-indice">Índice</h2>
         <ul class="links">
             <strong>
-                <li><a href="#comienzos-de-la-banda">Comienzos de la banda.</a></li>
-                <li><a href="#">Álbunes.</a></li>
-                <li><a href="#">Hits.</a></li>
-                <li><a href="#">Premios y Nominaciones.</a></li>
+                <li><a href="#seccion-comienzos-de-la-banda">Comienzos de la banda.</a></li>
+                <li><a href="#seccion-albunes">Álbunes.</a></li>
+                <li><a href="#seccion-hits">Hits.</a></li>
+                <li><a href="#seccion-premios-y-nominaciones">Premios y Nominaciones.</a></li>
             </strong>
         </ul>
     </div>
 
     <!-- Comienzos de la banda -->
-    <div id="comienzos-de-la-banda" class="comienzos-banda">
+    <div id="seccion-comienzos-de-la-banda" class="secciones comienzos-banda">
         <h2>Comienzos de la Banda</h2>
         <p>Los tres hermanos, oriundos de la localidad de Don Torcuato, partido de Tigre, provincia de Buenos Aires, Argentina, empezaron a tocar juntos, a mediados de los años 90's bajo el nombre de <strong>"Los nietos de Chuck"</strong>, donde hacían covers de otros artituas como "Chuck Berry", "The Beatles", "Creedence", entre otros.</p>
-        <br>
         <p>Su primer contacto con la música fue por su abuela materna, Blasa, que era aficionada al tango y le enseñaba esa música a Patricio, que a sus tres años y medio, participó del programa <strong>Grandes Valores del Tango</strong>. En ese mismo programa le regalan una guitarra del Museo Carlos Gardel que más de diez años después, iba a ser clave para que comience su carrera en el rock.</p>
         <p>Años después, Gastón formó una banda con sus amigos del secundario, grabaron varias canciones con esa banda que le mostró a sus hermanos y los contagió con sus ganas de hacer musica. Los banda ensayaba en el garaje de los hermanos Sardelli, y cuando terminaban Patricio y Guido se quedaban tocando con Gastón ya que no tenían instrumentos propios. Con el tiempo el trío empezó a funcionar y Gastón abandonó la banda y formó "<strong>Los Niestos de Chuck</strong>" con sus hermanos. El nombre surgió porque hacian covers de "Chuck Berry", aunque tambien incluían en su repertorio temas de <strong>The Beatles, Creedence, Jerry Lee Lewis</strong> y otros estilos. Empezaron a tocar en bares, pubs, fiestas y eventos.</p>
+        <p>A los 14 años, Patricio empezó a componer canciones y la banda emprendió una búsqueda de su identidad propia. Comenzaron a grabar de manera casera canciones y las sumaron a su repertorio. Tambien buscaron otro nombre, tuvieron varios, hasta que un día se presentaron como <strong>"Airbag"</strong> y lo adoptaron para siempre.</p>
     </div>
 
-    
+    <!-- Álbunes -->
+    <div id="seccion-albunes" class="secciones albunes">
+        <h2>Álbunes</h2>
+        <p>A lo largo de toda su carrera, Airbag ha sacado un total de <strong>7 albunes</strong> de estudio.</p>
+        <h3 class="albun">Airgab (2004)</h3>
+        <h3 class="albun">Blanco y Negro (2006)</h3>
+        <h3 class="albun">Una hora a Tokyo (2008)</h3>
+        <h3 class="albun">Vorágine (2011)</h3>
+        <h3 class="albun">Libertard (2013)</h3>
+        <h3 class="albun">Mentira la Verdad (2016)</h3>
+        <h3 class="albun">Al parecer todo ha sido una trampa (2021)</h3>
+    </div>
+
+    <!-- Hits -->
+    <div id="seccion-hits" class="secciones hits">
+        <h2>Hits</h2>
+
+    </div>
+
+    <!-- Premios y Nominaciones -->
+    <div id="seccion-premios-y-nominaciones" class="secciones premios-nominaciones">
+        <h2>Premios y Nominaciones</h2>
+        <!-- Tabla -->
+        <table>
+            <colgroup span="6"></colgroup>
+            <tr>
+                <th>Año</th>
+                <th>Premio</th>
+                <th>Categoría</th>
+                <th>Trabajo</th>
+                <th>Resultado</th>
+            </tr>
+            <tr>
+                <td>2004</td>
+                <td>Premios MTV</td>
+                <td>Mejor artista nuevo sur</td>
+                <td>Airbag</td>
+                <td>Ganadores</td>
+            </tr>
+            <tr>
+                <td>2005</td>
+                <td>Premios Carlos Gardel</td>
+                <td>Mejor álbun artista revelación</td>
+                <td>Airbag</td>
+                <td>Nominados</td>
+            </tr>
+            <tr>
+                <td>2007</td>
+                <td>Premios MTV</td>
+                <td>Mejor artista nuevo sur</td>
+                <td>Airbag</td>
+                <td>Ganadores</td>
+            </tr>
+            <tr>
+                <td>2009</td>
+                <td>Premios Grammy Latinos</td>
+                <td>Mejor albún de rock vocal dúo o grupo</td>
+                <td>Una Hora a Tokyo</td>
+                <td>Nominados</td>
+            </tr>
+            <tr>
+                <td>2013</td>
+                <td>MTV Europe Music Awards</td>
+                <td>Mejor artista América del Sur</td>
+                <td>Airbag</td>
+                <td>Ganadores</td>
+            </tr>
+            <tr>
+                <td>2016</td>
+                <td>Kid's Choice Awards Argentina</td>
+                <td>Artista o grupo Nacional favorito</td>
+                <td>Airbag</td>
+                <td>Nominados</td>
+            </tr>
+            <tr>
+                <td>2017</td>
+                <td>MTV Europe Music Awards</td>
+                <td>Mejor artista América del Sur</td>
+                <td>Airbag</td>
+                <td>Nominados</td>
+            </tr>
+        </table>
+        <br>
+        <p>Además han recibidos premios "Much Music" y recurrentes nominaciones a los "Premios Gardel" de Argentina. Entre otras distinciones, el grupo musical en los últimos años ha empezado a ser reconocida por especialistas en el rock y por los propios artistas, así mismo Patricio Sardelli ha sido elegido como uno de los 100 mejores guitarristas de la historia del rocj nacional por la revista <strong>Rolling Stone</strong> de Argentina.</p>
+    </div>
 </body>
 </html>
