corrección de errores

--- a/actividad-biografia/index.html
+++ b/actividad-biografia/index.html
@@ -62,7 +62,7 @@
     <div id="seccion-premios-y-nominaciones" class="secciones premios-nominaciones">
         <h2>Premios y Nominaciones</h2>
         <!-- Tabla -->
-        <table>
+        <table border="collapse">
             <colgroup span="6"></colgroup>
             <tr>
                 <th>Año</th>
@@ -122,7 +122,7 @@
             </tr>
         </table>
         <br>
-        <p>Además han recibidos premios "Much Music" y recurrentes nominaciones a los "Premios Gardel" de Argentina. Entre otras distinciones, el grupo musical en los últimos años ha empezado a ser reconocida por especialistas en el rock y por los propios artistas, así mismo Patricio Sardelli ha sido elegido como uno de los 100 mejores guitarristas de la historia del rocj nacional por la revista <strong>Rolling Stone</strong> de Argentina.</p>
+        <p>Además han recibidos premios "Much Music" y recurrentes nominaciones a los "Premios Gardel" de Argentina. Entre otras distinciones, el grupo musical en los últimos años ha empezado a ser reconocida por especialistas en el rock y por los propios artistas, así mismo Patricio Sardelli ha sido elegido como uno de los 100 mejores guitarristas de la historia del rock nacional por la revista <strong>Rolling Stone</strong> de Argentina.</p>
     </div>
 </body>
 </html>
