--- a/actividad-biografia/index.html
+++ b/actividad-biografia/index.html
@@ -24,7 +24,6 @@
             <strong>
                 <li><a href="#seccion-comienzos-de-la-banda">Comienzos de la banda.</a></li>
                 <li><a href="#seccion-albunes">Álbunes.</a></li>
-                <li><a href="#seccion-hits">Hits.</a></li>
                 <li><a href="#seccion-premios-y-nominaciones">Premios y Nominaciones.</a></li>
             </strong>
         </ul>
@@ -33,6 +32,7 @@
     <!-- Comienzos de la banda -->
     <div id="seccion-comienzos-de-la-banda" class="secciones comienzos-banda">
         <h2>Comienzos de la Banda</h2>
+        <img class="imagen-airbag" src="https://i.scdn.co/image/ab6761610000e5eb7111b2876af6e3d2df1b667e" alt="Fotografia de Airbag">
         <p>Los tres hermanos, oriundos de la localidad de Don Torcuato, partido de Tigre, provincia de Buenos Aires, Argentina, empezaron a tocar juntos, a mediados de los años 90's bajo el nombre de <strong>"Los nietos de Chuck"</strong>, donde hacían covers de otros artituas como "Chuck Berry", "The Beatles", "Creedence", entre otros.</p>
         <p>Su primer contacto con la música fue por su abuela materna, Blasa, que era aficionada al tango y le enseñaba esa música a Patricio, que a sus tres años y medio, participó del programa <strong>Grandes Valores del Tango</strong>. En ese mismo programa le regalan una guitarra del Museo Carlos Gardel que más de diez años después, iba a ser clave para que comience su carrera en el rock.</p>
         <p>Años después, Gastón formó una banda con sus amigos del secundario, grabaron varias canciones con esa banda que le mostró a sus hermanos y los contagió con sus ganas de hacer musica. Los banda ensayaba en el garaje de los hermanos Sardelli, y cuando terminaban Patricio y Guido se quedaban tocando con Gastón ya que no tenían instrumentos propios. Con el tiempo el trío empezó a funcionar y Gastón abandonó la banda y formó "<strong>Los Niestos de Chuck</strong>" con sus hermanos. El nombre surgió porque hacian covers de "Chuck Berry", aunque tambien incluían en su repertorio temas de <strong>The Beatles, Creedence, Jerry Lee Lewis</strong> y otros estilos. Empezaron a tocar en bares, pubs, fiestas y eventos.</p>
@@ -42,20 +42,16 @@
     <!-- Álbunes -->
     <div id="seccion-albunes" class="secciones albunes">
         <h2>Álbunes</h2>
-        <p>A lo largo de toda su carrera, Airbag ha sacado un total de <strong>7 albunes</strong> de estudio.</p>
-        <h3 class="albun">Airgab (2004)</h3>
-        <h3 class="albun">Blanco y Negro (2006)</h3>
-        <h3 class="albun">Una hora a Tokyo (2008)</h3>
-        <h3 class="albun">Vorágine (2011)</h3>
-        <h3 class="albun">Libertard (2013)</h3>
-        <h3 class="albun">Mentira la Verdad (2016)</h3>
-        <h3 class="albun">Al parecer todo ha sido una trampa (2021)</h3>
-    </div>
-
-    <!-- Hits -->
-    <div id="seccion-hits" class="secciones hits">
-        <h2>Hits</h2>
-
+        <p>A lo largo de toda su carrera, Airbag ha sacado un total de <strong>7 albunes</strong> de estudio:</p>
+        <ul>
+            <li class="albun">Airbag (2004)</li>
+            <li class="albun">Blanco y Negro (2006)</li>
+            <li class="albun">Una Hora a Tokyo (2008)</li>
+            <li class="albun">Vorágine (2011)</li>
+            <li class="albun">Libertad (2013)</li>
+            <li class="albun">Mentira la Verdad (2016)</li>
+            <li class="albun">Al parecer todo ha sido una trampa (2021)</li>
+        </ul>
     </div>
 
     <!-- Premios y Nominaciones -->
