Seccion 'Acerca de Mi' Terminado

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -62,10 +62,23 @@
     <!-- Acerca De -->
     <section id="acercaDe">
         <div class="container">
-            <h1 class="titulos">
+            <h1 class="titulos ">
                 <strong>Acerca De Mi</strong>
             </h1>
-
+            <div class="container d-flex flex-column justify-content-center">
+                <div class="row">
+                    <div class="col-7">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis magni, omnis nihil vitae quae hic iste consequatur neque minima sed, quas provident dolorem illum ducimus veniam! Facilis, illum. Reiciendis, ullam?
+                        Deleniti facilis harum distinctio ab beatae enim cumque voluptates. At quas saepe nostrum autem facere veritatis similique architecto tempora accusantium, asperiores earum fuga nobis doloribus cupiditate omnis accusamus aut rerum.
+                        Nisi sed iste officia veritatis, fugit maiores repellat, voluptatibus, totam velit adipisci nostrum impedit ipsam modi quia repudiandae</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In itaque accusantium ipsa esse mollitia ducimus exercitationem vel atque fugit, nesciunt eveniet amet nihil quia omnis excepturi, facere fugiat, quae blanditiis?
+                        Officiis, dicta, vel hic rem architecto ipsam possimus ut dolorum optio quidem nihil voluptatem non voluptates odit ipsum quia! Ea vitae totam consequatur illo eligendi aspernatur quasi facere veniam dignissimos!</p>
+                    </div>
+                    <div class="col">
+                        <img src="img/about imagen.jpg" class="img-fluid shadow rounded" alt="Imagen acerca de">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
