--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -92,44 +92,32 @@
             <div class="row">
                 <div class="col">
                     <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-danger" style="width: 25%">25%</div>
+                        <div class="progress-bar bg-danger" style="width: 65%">HTML</div>
                     </div>
                     <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-info text-dark" style="width: 50%">50%</div>
+                        <div class="progress-bar bg-warning text-dark" style="width: 30%">Javascript</div>
                     </div>
                     <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-warning text-dark" style="width: 75%">75%</div>
-                    </div>
-                    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-danger" style="width: 100%">100%</div>
+                        <div class="progress-bar bg-danger" style="width: 75%">Git/Github</div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-success" style="width: 25%">25%</div>
+                        <div class="progress-bar bg-info text-dark" style="width: 50%">CSS</div>
                     </div>
                     <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-info text-dark" style="width: 50%">50%</div>
+                        <div class="progress-bar bg-success" style="width: 70%">Python</div>
                     </div>
                     <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-warning text-dark" style="width: 75%">75%</div>
-                    </div>
-                    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-danger" style="width: 100%">100%</div>
+                        <div class="progress-bar bg-warning text-dark" style="width: 50%">Ingles</div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-success" style="width: 25%">25%</div>
+                        <div class="progress-bar bg-info text-dark" style="width: 60%">Bootstrap</div>
                     </div>
                     <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-info text-dark" style="width: 50%">50%</div>
-                    </div>
-                    <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-warning text-dark" style="width: 75%">75%</div>
-                    </div>
-                    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar bg-danger" style="width: 100%">100%</div>
+                        <div class="progress-bar bg-success" style="width: 50%">C</div>
                     </div>
                 </div>
             </div>
