--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary position-fixed w-100">
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary position-fixed w-100 ">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -131,6 +131,80 @@
             <h1 class="titulos">
                 <strong>Estudios</strong>
             </h1>
+            <div class="row">
+                <div class="col">
+                    <!-- IGSM -->
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="img/Logo igsm.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Secundario Completo</h5>
+                                    <p class="card-text">Secundario con orientación en bachillerato Ciencias Naturales.</p>
+                                    <p class="card-text"><small class="text-body-secondary">2009 - 2021</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <!-- UNLU -->
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="img/Logo Unlu.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Lic. en Sistemas de la Información</h5>
+                                    <p class="card-text">Estoy realizando mis estudios en las T.I. en la Universidad Nacional de Lujan.</p>
+                                    <p class="card-text"><small class="text-body-secondary">2022 - Cursando</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <h2>Cursos</h2>
+            <div class="row">
+                <div class="col">
+                    <!--  -->
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="img/Logo UTN.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Excel Avanzado y Power Bi</h5>
+                                    <p class="card-text">En el mes de diciembre 2022, acredité 56 horas de formación en Excel avanzado, Power Bi inicial, Gestión de proyectos e Inteligencia Emocional.</p>
+                                    <p class="card-text"><small class="text-body-secondary">2022</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <!-- UNLU -->
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="img/Logo UTN.jpg" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Programación Web Inicial</h5>
+                                    <p class="card-text">En este curso, se me dieron las herramientas para la introducción al desarrollo web. Las tecnologías son: HTML, CSS, Bootstrap, Javascript, Git/Github.</p>
+                                    <p class="card-text"><small class="text-body-secondary">2023 - Cursando</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
